feat: Implement Google OAuth2 social login with .env configuration
- Add Google OAuth2 authentication support
- Implement UserIdentity entity for managing OAuth2 user accounts
- Create OAuth2UserService for handling Google login
- Add OAuth2 authentication success/failure handlers
- Integrate dotenv-java library for .env file loading
- Update SecurityConfig to support OAuth2 login flow
- Add OAuth2CallbackHandler page for frontend
- Update AuthContext to handle social login
- Configure environment variables for Google OAuth credentials
- Add comprehensive documentation in docs/guides/google-social-login.md

All sensitive credentials are externalized to .env file and never committed to repository.